force-app/main/default/objects/Contenido_Planilla_Temporal__c/Contenido_Planilla_Temporal__c.object-meta.xml
<CustomObject>
    <label>Contenido_Planilla_Temporal</label>
    <nameField>
        <label>Nombre de Contenido_Planilla_Temporal__c</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Contenido_Planilla_Temporal</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>