force-app/main/default/objects/Contenido_Planilla_Temporal__c/fields/Aporte_Empleado_Extraordinario__c.field-meta.xml
<CustomField>
    <fullName>Aporte_Empleado_Extraordinario__c</fullName>
    <label>Aporte Empleado Extraordinario</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>