force-app/main/default/objects/Contenido_Planilla_Temporal__c/fields/Aporte_Patronal_Voluntario__c.field-meta.xml
<CustomField>
    <fullName>Aporte_Patronal_Voluntario__c</fullName>
    <label>Aporte Patronal Voluntario</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>