force-app/main/default/objects/Contenido_Planilla_Temporal__c/fields/Aporte_Patrono_Extraordinario__c.field-meta.xml
<CustomField>
    <fullName>Aporte_Patrono_Extraordinario__c</fullName>
    <label>Aporte_Patrono_Extraordinario</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>