force-app/main/default/objects/Contenido_Planilla_Temporal__c/fields/Aporte_Reserva_Laboral__c.field-meta.xml
<CustomField>
    <fullName>Aporte_Reserva_Laboral__c</fullName>
    <label>Aporte Reserva Laboral</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>