force-app/main/default/objects/Contenido_Planilla_Temporal__c/fields/Aporte_Seguro_de_Vida__c.field-meta.xml
<CustomField>
    <fullName>Aporte_Seguro_de_Vida__c</fullName>
    <label>Aporte Seguro de Vida</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>