force-app/main/default/objects/Contenido_Planilla_Temporal__c/fields/Identidad__c.field-meta.xml
<CustomField>
    <fullName>Identidad__c</fullName>
    <label>Identidad</label>
    <length>25</length>
    <type>Text</type>
</CustomField>