force-app/main/default/objects/Contenido_Planilla_Temporal__c/fields/Planilla__c.field-meta.xml
<CustomField>
    <fullName>Planilla__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Planilla Temporal</label>
    <referenceTo>Planilla_Temporal__c</referenceTo>
    <relationshipLabel>Contenido_Planilla_Temporal</relationshipLabel>
    <relationshipName>Contenido_Planilla_Temporal</relationshipName>
    <type>Lookup</type>
</CustomField>